# sparse-matrix-multiplication-testing-environment

./: .gitignore  Makefile  README.md  config.txt
application/: main.c
application/algorithms/: algorithms_common.c  blas_dgemm.c  gustavson.c  hypersparse_gemm.c  hypersparse_gemm_1.c  naive.c
application/common/: common.h
data_analytics/: README.md  pyproject.toml
data_analytics/data_analytics/: main.py
tests/: test_common.c  test_gustavson.c
