[tool.poetry]
name = "data-analytics"
version = "0.1.0"
description = ""
authors = ["ArnasVysniauskas <81956480+ArnasVysniauskas@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "data_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
matplot = "^0.1.9"
lib = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
